[package]
name = "bitcoin_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
clickhouse = "0.14.0" 
futures = "0.3"